Cyclopean hammer work

--- a/backend/arkham-core/arkham-core.cabal
+++ b/backend/arkham-core/arkham-core.cabal
@@ -498,6 +498,7 @@ library
       Arkham.Asset.Cards.CrystallizerOfDreams
       Arkham.Asset.Cards.CrystalPendulum
       Arkham.Asset.Cards.CurseOfAeons3
+      Arkham.Asset.Cards.CyclopeanHammer5
       Arkham.Asset.Cards.DaisysToteBag
       Arkham.Asset.Cards.DaisysToteBagAdvanced
       Arkham.Asset.Cards.DanielChesterfield
